assets/css/resume.css
p { line-height: 1.6; }
ul { margin-bottom: 0; }
section { margin: 1em 0 2em; }
blockquote {
	margin: 0;
	margin-bottom: 1em;
}
#resume {
	margin: 2em 2em 2em 2.5em;
	max-width: 760px;
}

.heading header h1 {
	font-size: 180%;
	margin: 0.5em 0;
	font-weight: 600;
}

.heading header h2 {
	font-size: 140%;
	margin: 0;
	font-weight: 400;
}

.heading header .contact .detail {
	margin: 0 1em 0 0;
}

.profile {
	display: inline-block;
	margin: 0 1em 0 0;
}

.profile strong,
.profile span {
	display: block;
	margin: 0 1em 0 0;
}
/* section / line breaks */
section h2 {
	font-size: 140%;
	margin: 0 0 1em;
	text-transform: uppercase;
	color: #BC1B39;
	font-weight: 400;
}

/* Experience items */
.item {
	margin: 0 0 1em;
	padding: 0 0 1em;
	border-bottom: 1px solid #DEE8F1;
}

.item:last-child {
	border-bottom: none;
}


.item header h3 {
	margin: 0.2em 1em 0.2em 0;
	display: inline-block;
	font-weight: 600;
}

.item header a {
	display: inline-block;
}

.item .position {
	font-weight: 600;
	font-size: 100%;
	margin: 0.2em 1em 0.2em 0;
}

.item .startDate,
.item .endDate {
	color: #6B6B6B;
}

.item .highlights {
	list-style: square;
	font-size: 90%;
}

/* skills */
#skills .item {
	margin: 0.5em 0;
	padding: 0 0 0.5em;
	font-size: 90%;
}

#skills .item .name {
	font-weight: 600;
	display: inline-block;
	text-transform: uppercase;
	margin: 0 1em 0 0;
	width: 23%;
	vertical-align: top;
}

#skills .item .keywords {
	display: inline-block;
	width: 70%;
	vertical-align: top;
}

/* education */
#education .item {
	display: inline-block;
	vertical-align: top;
	width: 49.5%;
	border-bottom: 0;
}

#publications .authors { font-size: 0.8em; }
#publications .venue { font-size: 0.8em; }

